// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1danmg7z,html._1danmg7z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="pqedlg0 _1y2ixaa18 _1y2ixaa1b">
+        <div class="zoxdxx0 _1danmg77i _1danmg76e _1danmg79q _1danmg78m _1danmg75e _1y2ixaa18 _1y2ixaa1b _1danmg732 _1danmg735">
+          <span class="zoxdxx0 _1danmg74y _1y2ixaa0 _1y2ixaa1 _1y2ixaa21 m3vcy34 _1y2ixaad">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .zoxdxx0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .zoxdxx0 {
  outline: none;
}
.zoxdxx1 {
  display: block;
}
.zoxdxx2 {
  line-height: 1;
}
.zoxdxx3 {
  list-style: none;
}
.zoxdxx4 {
  quotes: none;
}
.zoxdxx4:after,
.zoxdxx4:before {
  content: "";
}
.zoxdxx5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.zoxdxx6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.zoxdxx7 {
  background-color: transparent;
}
.zoxdxx9 {
  color: inherit;
}
.zoxdxxa:disabled {
  opacity: 1;
}
.zoxdxxa::-ms-expand {
  display: none;
}
.zoxdxxc[type="number"] {
  -moz-appearance: textfield;
}
.zoxdxxc[type="number"]::-webkit-inner-spin-button,
.zoxdxxc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.zoxdxxc::-ms-clear {
  display: none;
}
.zoxdxxc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.zoxdxxf {
  color: inherit;
  text-decoration: none;
}
._1danmg70 {
  overflow: hidden;
}
._1danmg71 {
  overflow: scroll;
}
._1danmg72 {
  overflow: visible;
}
._1danmg73 {
  overflow: auto;
}
._1danmg74 {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
._1danmg75 {
  outline: none;
}
._1danmg76 {
  opacity: 0;
}
._1danmg77 {
  z-index: 0;
}
._1danmg78 {
  z-index: 1;
}
._1danmg79 {
  z-index: 2;
}
._1danmg7a {
  z-index: 90;
}
._1danmg7b {
  z-index: 100;
}
._1danmg7c {
  z-index: 200;
}
._1danmg7d {
  z-index: 290;
}
._1danmg7e {
  z-index: 300;
}
._1danmg7f {
  z-index: 400;
}
._1danmg7g {
  cursor: default;
}
._1danmg7h {
  cursor: pointer;
}
._1danmg7i {
  pointer-events: none;
}
._1danmg7j {
  top: 0;
}
._1danmg7k {
  bottom: 0;
}
._1danmg7l {
  left: 0;
}
._1danmg7m {
  right: 0;
}
._1danmg7n {
  height: 100%;
}
._1danmg7o {
  height: var(--_14jajmn9);
}
._1danmg7p {
  width: 100%;
}
._1danmg7q {
  width: var(--_14jajmn9);
}
._1danmg7r {
  min-width: 0;
}
._1danmg7s {
  max-width: var(--_14jajmn11);
}
._1danmg7t {
  max-width: var(--_14jajmn12);
}
._1danmg7u {
  max-width: var(--_14jajmn13);
}
._1danmg7v {
  max-width: var(--_14jajmn14);
}
._1danmg7w {
  transition: var(--_14jajmn5i);
}
._1danmg7x {
  transition: var(--_14jajmn5j);
}
._1danmg7y:active {
  transform: var(--_14jajmn5k);
}
html._1danmg7z ._1danmg711,
html:not(._1danmg7z) ._1danmg710 {
  background: var(--_14jajmn1t);
}
html._1danmg7z ._1danmg713,
html:not(._1danmg7z) ._1danmg712 {
  background: var(--_14jajmn1u);
}
html._1danmg7z ._1danmg715,
html:not(._1danmg7z) ._1danmg714 {
  background: var(--_14jajmn1v);
}
html._1danmg7z ._1danmg717,
html:not(._1danmg7z) ._1danmg716 {
  background: var(--_14jajmn1w);
}
html._1danmg7z ._1danmg719,
html:not(._1danmg7z) ._1danmg718 {
  background: var(--_14jajmn1x);
}
html._1danmg7z ._1danmg71b,
html:not(._1danmg7z) ._1danmg71a {
  background: var(--_14jajmn1y);
}
html._1danmg7z ._1danmg71d,
html:not(._1danmg7z) ._1danmg71c {
  background: var(--_14jajmn1z);
}
html._1danmg7z ._1danmg71f,
html:not(._1danmg7z) ._1danmg71e {
  background: var(--_14jajmn20);
}
html._1danmg7z ._1danmg71h,
html:not(._1danmg7z) ._1danmg71g {
  background: var(--_14jajmn21);
}
html._1danmg7z ._1danmg71j,
html:not(._1danmg7z) ._1danmg71i {
  background: var(--_14jajmn22);
}
html._1danmg7z ._1danmg71l,
html:not(._1danmg7z) ._1danmg71k {
  background: var(--_14jajmn23);
}
html._1danmg7z ._1danmg71n,
html:not(._1danmg7z) ._1danmg71m {
  background: var(--_14jajmn24);
}
html._1danmg7z ._1danmg71p,
html:not(._1danmg7z) ._1danmg71o {
  background: var(--_14jajmn25);
}
html._1danmg7z ._1danmg71r,
html:not(._1danmg7z) ._1danmg71q {
  background: var(--_14jajmn26);
}
html._1danmg7z ._1danmg71t,
html:not(._1danmg7z) ._1danmg71s {
  background: var(--_14jajmn27);
}
html._1danmg7z ._1danmg71v,
html:not(._1danmg7z) ._1danmg71u {
  background: var(--_14jajmn28);
}
html._1danmg7z ._1danmg71x,
html:not(._1danmg7z) ._1danmg71w {
  background: var(--_14jajmn29);
}
html._1danmg7z ._1danmg71z,
html:not(._1danmg7z) ._1danmg71y {
  background: var(--_14jajmn2a);
}
html._1danmg7z ._1danmg721,
html:not(._1danmg7z) ._1danmg720 {
  background: var(--_14jajmn2b);
}
html._1danmg7z ._1danmg723,
html:not(._1danmg7z) ._1danmg722 {
  background: var(--_14jajmn2c);
}
html._1danmg7z ._1danmg725,
html:not(._1danmg7z) ._1danmg724 {
  background: var(--_14jajmn2d);
}
html._1danmg7z ._1danmg727,
html:not(._1danmg7z) ._1danmg726 {
  background: var(--_14jajmn2e);
}
html._1danmg7z ._1danmg729,
html:not(._1danmg7z) ._1danmg728 {
  background: var(--_14jajmn2f);
}
html._1danmg7z ._1danmg72b,
html:not(._1danmg7z) ._1danmg72a {
  background: var(--_14jajmn2g);
}
html._1danmg7z ._1danmg72d,
html:not(._1danmg7z) ._1danmg72c {
  background: var(--_14jajmn2h);
}
html._1danmg7z ._1danmg72f,
html:not(._1danmg7z) ._1danmg72e {
  background: var(--_14jajmn2i);
}
html._1danmg7z ._1danmg72h,
html:not(._1danmg7z) ._1danmg72g {
  background: var(--_14jajmn2j);
}
html._1danmg7z ._1danmg72j,
html:not(._1danmg7z) ._1danmg72i {
  background: var(--_14jajmn2k);
}
html._1danmg7z ._1danmg72l,
html:not(._1danmg7z) ._1danmg72k {
  background: var(--_14jajmn2l);
}
html._1danmg7z ._1danmg72n,
html:not(._1danmg7z) ._1danmg72m {
  background: var(--_14jajmn2m);
}
html._1danmg7z ._1danmg72p,
html:not(._1danmg7z) ._1danmg72o {
  background: var(--_14jajmn2n);
}
html._1danmg7z ._1danmg72r,
html:not(._1danmg7z) ._1danmg72q {
  background: var(--_14jajmn2o);
}
html._1danmg7z ._1danmg72t,
html:not(._1danmg7z) ._1danmg72s {
  background: var(--_14jajmn2p);
}
html._1danmg7z ._1danmg72v,
html:not(._1danmg7z) ._1danmg72u {
  background: var(--_14jajmn2q);
}
html._1danmg7z ._1danmg72x,
html:not(._1danmg7z) ._1danmg72w {
  background: var(--_14jajmn2r);
}
html._1danmg7z ._1danmg72z,
html:not(._1danmg7z) ._1danmg72y {
  background: var(--_14jajmn2s);
}
html._1danmg7z ._1danmg731,
html:not(._1danmg7z) ._1danmg730 {
  background: var(--_14jajmn2t);
}
html._1danmg7z ._1danmg733,
html:not(._1danmg7z) ._1danmg732 {
  background: var(--_14jajmn2u);
}
html._1danmg7z ._1danmg735,
html:not(._1danmg7z) ._1danmg734 {
  background: var(--_14jajmn2v);
}
html._1danmg7z ._1danmg737,
html:not(._1danmg7z) ._1danmg736 {
  box-shadow: var(--_14jajmn5l);
}
html._1danmg7z ._1danmg739,
html:not(._1danmg7z) ._1danmg738 {
  box-shadow: var(--_14jajmn5m);
}
html._1danmg7z ._1danmg73b,
html:not(._1danmg7z) ._1danmg73a {
  box-shadow: var(--_14jajmn5n);
}
html._1danmg7z ._1danmg73d,
html:not(._1danmg7z) ._1danmg73c {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnf);
}
html._1danmg7z ._1danmg73f,
html:not(._1danmg7z) ._1danmg73e {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmng);
}
html._1danmg7z ._1danmg73h,
html:not(._1danmg7z) ._1danmg73g {
  box-shadow: inset 0 0 0 var(--_14jajmnz) var(--_14jajmnf);
}
html._1danmg7z ._1danmg73j,
html:not(._1danmg7z) ._1danmg73i {
  box-shadow: inset 0 0 0 var(--_14jajmnz) var(--_14jajmng);
}
html._1danmg7z ._1danmg73l,
html:not(._1danmg7z) ._1danmg73k {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnh);
}
html._1danmg7z ._1danmg73n,
html:not(._1danmg7z) ._1danmg73m {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmni);
}
html._1danmg7z ._1danmg73p,
html:not(._1danmg7z) ._1danmg73o {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnj);
}
html._1danmg7z ._1danmg73r,
html:not(._1danmg7z) ._1danmg73q {
  box-shadow: inset 0 0 0 var(--_14jajmnz) var(--_14jajmnj);
}
html._1danmg7z ._1danmg73t,
html:not(._1danmg7z) ._1danmg73s {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnk);
}
html._1danmg7z ._1danmg73v,
html:not(._1danmg7z) ._1danmg73u {
  box-shadow: inset 0 0 0 var(--_14jajmnz) var(--_14jajmnk);
}
html._1danmg7z ._1danmg73x,
html:not(._1danmg7z) ._1danmg73w {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnl);
}
html._1danmg7z ._1danmg73z,
html:not(._1danmg7z) ._1danmg73y {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnn);
}
html._1danmg7z ._1danmg741,
html:not(._1danmg7z) ._1danmg740 {
  box-shadow: inset 0 0 0 var(--_14jajmnz) var(--_14jajmnn);
}
html._1danmg7z ._1danmg743,
html:not(._1danmg7z) ._1danmg742 {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmno);
}
html._1danmg7z ._1danmg745,
html:not(._1danmg7z) ._1danmg744 {
  box-shadow: inset 0 0 0 var(--_14jajmnz) var(--_14jajmno);
}
html._1danmg7z ._1danmg747,
html:not(._1danmg7z) ._1danmg746 {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnp);
}
html._1danmg7z ._1danmg749,
html:not(._1danmg7z) ._1danmg748 {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnq);
}
html._1danmg7z ._1danmg74b,
html:not(._1danmg7z) ._1danmg74a {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnr);
}
html._1danmg7z ._1danmg74d,
html:not(._1danmg7z) ._1danmg74c {
  box-shadow: inset 0 0 0 var(--_14jajmnz) var(--_14jajmnr);
}
html._1danmg7z ._1danmg74f,
html:not(._1danmg7z) ._1danmg74e {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmns);
}
html._1danmg7z ._1danmg74h,
html:not(._1danmg7z) ._1danmg74g {
  box-shadow: inset 0 0 0 var(--_14jajmnz) var(--_14jajmns);
}
html._1danmg7z ._1danmg74j,
html:not(._1danmg7z) ._1danmg74i {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnt);
}
html._1danmg7z ._1danmg74l,
html:not(._1danmg7z) ._1danmg74k {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnu);
}
html._1danmg7z ._1danmg74n,
html:not(._1danmg7z) ._1danmg74m {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnv);
}
html._1danmg7z ._1danmg74p,
html:not(._1danmg7z) ._1danmg74o {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnw);
}
html._1danmg7z ._1danmg74r,
html:not(._1danmg7z) ._1danmg74q {
  box-shadow: inset 0 0 0 var(--_14jajmny) var(--_14jajmnx);
}
html._1danmg7z ._1danmg74t,
html:not(._1danmg7z) ._1danmg74s {
  box-shadow: 0 0 0 var(--_14jajmn10) var(--_14jajmnm);
}
._1danmg74u {
  display: none;
}
._1danmg74y {
  display: block;
}
._1danmg752 {
  display: inline;
}
._1danmg756 {
  display: inline-block;
}
._1danmg75a {
  display: flex;
}
._1danmg75e {
  position: relative;
}
._1danmg75i {
  position: absolute;
}
._1danmg75m {
  position: fixed;
}
._1danmg75q {
  border-radius: 0;
}
._1danmg75u {
  border-radius: 9999px;
}
._1danmg75y {
  border-radius: var(--_14jajmnb);
}
._1danmg762 {
  border-radius: var(--_14jajmnc);
}
._1danmg766 {
  border-radius: var(--_14jajmnd);
}
._1danmg76a {
  border-radius: var(--_14jajmne);
}
._1danmg76e {
  padding-top: var(--_14jajmn0);
}
._1danmg76i {
  padding-top: var(--_14jajmn1);
}
._1danmg76m {
  padding-top: var(--_14jajmn2);
}
._1danmg76q {
  padding-top: var(--_14jajmn3);
}
._1danmg76u {
  padding-top: var(--_14jajmn4);
}
._1danmg76y {
  padding-top: var(--_14jajmn5);
}
._1danmg772 {
  padding-top: var(--_14jajmn6);
}
._1danmg776 {
  padding-top: var(--_14jajmn7);
}
._1danmg77a {
  padding-top: var(--_14jajmn8);
}
._1danmg77e {
  padding-top: 0;
}
._1danmg77i {
  padding-bottom: var(--_14jajmn0);
}
._1danmg77m {
  padding-bottom: var(--_14jajmn1);
}
._1danmg77q {
  padding-bottom: var(--_14jajmn2);
}
._1danmg77u {
  padding-bottom: var(--_14jajmn3);
}
._1danmg77y {
  padding-bottom: var(--_14jajmn4);
}
._1danmg782 {
  padding-bottom: var(--_14jajmn5);
}
._1danmg786 {
  padding-bottom: var(--_14jajmn6);
}
._1danmg78a {
  padding-bottom: var(--_14jajmn7);
}
._1danmg78e {
  padding-bottom: var(--_14jajmn8);
}
._1danmg78i {
  padding-bottom: 0;
}
._1danmg78m {
  padding-right: var(--_14jajmn0);
}
._1danmg78q {
  padding-right: var(--_14jajmn1);
}
._1danmg78u {
  padding-right: var(--_14jajmn2);
}
._1danmg78y {
  padding-right: var(--_14jajmn3);
}
._1danmg792 {
  padding-right: var(--_14jajmn4);
}
._1danmg796 {
  padding-right: var(--_14jajmn5);
}
._1danmg79a {
  padding-right: var(--_14jajmn6);
}
._1danmg79e {
  padding-right: var(--_14jajmn7);
}
._1danmg79i {
  padding-right: var(--_14jajmn8);
}
._1danmg79m {
  padding-right: 0;
}
._1danmg79q {
  padding-left: var(--_14jajmn0);
}
._1danmg79u {
  padding-left: var(--_14jajmn1);
}
._1danmg79y {
  padding-left: var(--_14jajmn2);
}
._1danmg7a2 {
  padding-left: var(--_14jajmn3);
}
._1danmg7a6 {
  padding-left: var(--_14jajmn4);
}
._1danmg7aa {
  padding-left: var(--_14jajmn5);
}
._1danmg7ae {
  padding-left: var(--_14jajmn6);
}
._1danmg7ai {
  padding-left: var(--_14jajmn7);
}
._1danmg7am {
  padding-left: var(--_14jajmn8);
}
._1danmg7aq {
  padding-left: 0;
}
._1danmg7au {
  margin-top: var(--_14jajmn0);
}
._1danmg7ay {
  margin-top: var(--_14jajmn1);
}
._1danmg7b2 {
  margin-top: var(--_14jajmn2);
}
._1danmg7b6 {
  margin-top: var(--_14jajmn3);
}
._1danmg7ba {
  margin-top: var(--_14jajmn4);
}
._1danmg7be {
  margin-top: var(--_14jajmn5);
}
._1danmg7bi {
  margin-top: var(--_14jajmn6);
}
._1danmg7bm {
  margin-top: var(--_14jajmn7);
}
._1danmg7bq {
  margin-top: var(--_14jajmn8);
}
._1danmg7bu {
  margin-top: 0;
}
._1danmg7by {
  margin-bottom: var(--_14jajmn0);
}
._1danmg7c2 {
  margin-bottom: var(--_14jajmn1);
}
._1danmg7c6 {
  margin-bottom: var(--_14jajmn2);
}
._1danmg7ca {
  margin-bottom: var(--_14jajmn3);
}
._1danmg7ce {
  margin-bottom: var(--_14jajmn4);
}
._1danmg7ci {
  margin-bottom: var(--_14jajmn5);
}
._1danmg7cm {
  margin-bottom: var(--_14jajmn6);
}
._1danmg7cq {
  margin-bottom: var(--_14jajmn7);
}
._1danmg7cu {
  margin-bottom: var(--_14jajmn8);
}
._1danmg7cy {
  margin-bottom: 0;
}
._1danmg7d2 {
  margin-right: var(--_14jajmn0);
}
._1danmg7d6 {
  margin-right: var(--_14jajmn1);
}
._1danmg7da {
  margin-right: var(--_14jajmn2);
}
._1danmg7de {
  margin-right: var(--_14jajmn3);
}
._1danmg7di {
  margin-right: var(--_14jajmn4);
}
._1danmg7dm {
  margin-right: var(--_14jajmn5);
}
._1danmg7dq {
  margin-right: var(--_14jajmn6);
}
._1danmg7du {
  margin-right: var(--_14jajmn7);
}
._1danmg7dy {
  margin-right: var(--_14jajmn8);
}
._1danmg7e2 {
  margin-right: 0;
}
._1danmg7e6 {
  margin-left: var(--_14jajmn0);
}
._1danmg7ea {
  margin-left: var(--_14jajmn1);
}
._1danmg7ee {
  margin-left: var(--_14jajmn2);
}
._1danmg7ei {
  margin-left: var(--_14jajmn3);
}
._1danmg7em {
  margin-left: var(--_14jajmn4);
}
._1danmg7eq {
  margin-left: var(--_14jajmn5);
}
._1danmg7eu {
  margin-left: var(--_14jajmn6);
}
._1danmg7ey {
  margin-left: var(--_14jajmn7);
}
._1danmg7f2 {
  margin-left: var(--_14jajmn8);
}
._1danmg7f6 {
  margin-left: 0;
}
._1danmg7fa {
  align-items: flex-start;
}
._1danmg7fe {
  align-items: center;
}
._1danmg7fi {
  align-items: flex-end;
}
._1danmg7fm {
  justify-content: flex-start;
}
._1danmg7fq {
  justify-content: center;
}
._1danmg7fu {
  justify-content: flex-end;
}
._1danmg7fy {
  justify-content: space-between;
}
._1danmg7g2 {
  flex-direction: row;
}
._1danmg7g6 {
  flex-direction: row-reverse;
}
._1danmg7ga {
  flex-direction: column;
}
._1danmg7ge {
  flex-direction: column-reverse;
}
._1danmg7gi {
  flex-wrap: wrap;
}
._1danmg7gm {
  flex-wrap: nowrap;
}
._1danmg7gq {
  flex-shrink: 0;
}
._1danmg7gu {
  flex-grow: 0;
}
._1danmg7gy {
  flex-grow: 1;
}
._1danmg7h2 {
  text-align: left;
}
._1danmg7h6 {
  text-align: center;
}
._1danmg7ha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1danmg74v {
    display: none;
  }
  ._1danmg74z {
    display: block;
  }
  ._1danmg753 {
    display: inline;
  }
  ._1danmg757 {
    display: inline-block;
  }
  ._1danmg75b {
    display: flex;
  }
  ._1danmg75f {
    position: relative;
  }
  ._1danmg75j {
    position: absolute;
  }
  ._1danmg75n {
    position: fixed;
  }
  ._1danmg75r {
    border-radius: 0;
  }
  ._1danmg75v {
    border-radius: 9999px;
  }
  ._1danmg75z {
    border-radius: var(--_14jajmnb);
  }
  ._1danmg763 {
    border-radius: var(--_14jajmnc);
  }
  ._1danmg767 {
    border-radius: var(--_14jajmnd);
  }
  ._1danmg76b {
    border-radius: var(--_14jajmne);
  }
  ._1danmg76f {
    padding-top: var(--_14jajmn0);
  }
  ._1danmg76j {
    padding-top: var(--_14jajmn1);
  }
  ._1danmg76n {
    padding-top: var(--_14jajmn2);
  }
  ._1danmg76r {
    padding-top: var(--_14jajmn3);
  }
  ._1danmg76v {
    padding-top: var(--_14jajmn4);
  }
  ._1danmg76z {
    padding-top: var(--_14jajmn5);
  }
  ._1danmg773 {
    padding-top: var(--_14jajmn6);
  }
  ._1danmg777 {
    padding-top: var(--_14jajmn7);
  }
  ._1danmg77b {
    padding-top: var(--_14jajmn8);
  }
  ._1danmg77f {
    padding-top: 0;
  }
  ._1danmg77j {
    padding-bottom: var(--_14jajmn0);
  }
  ._1danmg77n {
    padding-bottom: var(--_14jajmn1);
  }
  ._1danmg77r {
    padding-bottom: var(--_14jajmn2);
  }
  ._1danmg77v {
    padding-bottom: var(--_14jajmn3);
  }
  ._1danmg77z {
    padding-bottom: var(--_14jajmn4);
  }
  ._1danmg783 {
    padding-bottom: var(--_14jajmn5);
  }
  ._1danmg787 {
    padding-bottom: var(--_14jajmn6);
  }
  ._1danmg78b {
    padding-bottom: var(--_14jajmn7);
  }
  ._1danmg78f {
    padding-bottom: var(--_14jajmn8);
  }
  ._1danmg78j {
    padding-bottom: 0;
  }
  ._1danmg78n {
    padding-right: var(--_14jajmn0);
  }
  ._1danmg78r {
    padding-right: var(--_14jajmn1);
  }
  ._1danmg78v {
    padding-right: var(--_14jajmn2);
  }
  ._1danmg78z {
    padding-right: var(--_14jajmn3);
  }
  ._1danmg793 {
    padding-right: var(--_14jajmn4);
  }
  ._1danmg797 {
    padding-right: var(--_14jajmn5);
  }
  ._1danmg79b {
    padding-right: var(--_14jajmn6);
  }
  ._1danmg79f {
    padding-right: var(--_14jajmn7);
  }
  ._1danmg79j {
    padding-right: var(--_14jajmn8);
  }
  ._1danmg79n {
    padding-right: 0;
  }
  ._1danmg79r {
    padding-left: var(--_14jajmn0);
  }
  ._1danmg79v {
    padding-left: var(--_14jajmn1);
  }
  ._1danmg79z {
    padding-left: var(--_14jajmn2);
  }
  ._1danmg7a3 {
    padding-left: var(--_14jajmn3);
  }
  ._1danmg7a7 {
    padding-left: var(--_14jajmn4);
  }
  ._1danmg7ab {
    padding-left: var(--_14jajmn5);
  }
  ._1danmg7af {
    padding-left: var(--_14jajmn6);
  }
  ._1danmg7aj {
    padding-left: var(--_14jajmn7);
  }
  ._1danmg7an {
    padding-left: var(--_14jajmn8);
  }
  ._1danmg7ar {
    padding-left: 0;
  }
  ._1danmg7av {
    margin-top: var(--_14jajmn0);
  }
  ._1danmg7az {
    margin-top: var(--_14jajmn1);
  }
  ._1danmg7b3 {
    margin-top: var(--_14jajmn2);
  }
  ._1danmg7b7 {
    margin-top: var(--_14jajmn3);
  }
  ._1danmg7bb {
    margin-top: var(--_14jajmn4);
  }
  ._1danmg7bf {
    margin-top: var(--_14jajmn5);
  }
  ._1danmg7bj {
    margin-top: var(--_14jajmn6);
  }
  ._1danmg7bn {
    margin-top: var(--_14jajmn7);
  }
  ._1danmg7br {
    margin-top: var(--_14jajmn8);
  }
  ._1danmg7bv {
    margin-top: 0;
  }
  ._1danmg7bz {
    margin-bottom: var(--_14jajmn0);
  }
  ._1danmg7c3 {
    margin-bottom: var(--_14jajmn1);
  }
  ._1danmg7c7 {
    margin-bottom: var(--_14jajmn2);
  }
  ._1danmg7cb {
    margin-bottom: var(--_14jajmn3);
  }
  ._1danmg7cf {
    margin-bottom: var(--_14jajmn4);
  }
  ._1danmg7cj {
    margin-bottom: var(--_14jajmn5);
  }
  ._1danmg7cn {
    margin-bottom: var(--_14jajmn6);
  }
  ._1danmg7cr {
    margin-bottom: var(--_14jajmn7);
  }
  ._1danmg7cv {
    margin-bottom: var(--_14jajmn8);
  }
  ._1danmg7cz {
    margin-bottom: 0;
  }
  ._1danmg7d3 {
    margin-right: var(--_14jajmn0);
  }
  ._1danmg7d7 {
    margin-right: var(--_14jajmn1);
  }
  ._1danmg7db {
    margin-right: var(--_14jajmn2);
  }
  ._1danmg7df {
    margin-right: var(--_14jajmn3);
  }
  ._1danmg7dj {
    margin-right: var(--_14jajmn4);
  }
  ._1danmg7dn {
    margin-right: var(--_14jajmn5);
  }
  ._1danmg7dr {
    margin-right: var(--_14jajmn6);
  }
  ._1danmg7dv {
    margin-right: var(--_14jajmn7);
  }
  ._1danmg7dz {
    margin-right: var(--_14jajmn8);
  }
  ._1danmg7e3 {
    margin-right: 0;
  }
  ._1danmg7e7 {
    margin-left: var(--_14jajmn0);
  }
  ._1danmg7eb {
    margin-left: var(--_14jajmn1);
  }
  ._1danmg7ef {
    margin-left: var(--_14jajmn2);
  }
  ._1danmg7ej {
    margin-left: var(--_14jajmn3);
  }
  ._1danmg7en {
    margin-left: var(--_14jajmn4);
  }
  ._1danmg7er {
    margin-left: var(--_14jajmn5);
  }
  ._1danmg7ev {
    margin-left: var(--_14jajmn6);
  }
  ._1danmg7ez {
    margin-left: var(--_14jajmn7);
  }
  ._1danmg7f3 {
    margin-left: var(--_14jajmn8);
  }
  ._1danmg7f7 {
    margin-left: 0;
  }
  ._1danmg7fb {
    align-items: flex-start;
  }
  ._1danmg7ff {
    align-items: center;
  }
  ._1danmg7fj {
    align-items: flex-end;
  }
  ._1danmg7fn {
    justify-content: flex-start;
  }
  ._1danmg7fr {
    justify-content: center;
  }
  ._1danmg7fv {
    justify-content: flex-end;
  }
  ._1danmg7fz {
    justify-content: space-between;
  }
  ._1danmg7g3 {
    flex-direction: row;
  }
  ._1danmg7g7 {
    flex-direction: row-reverse;
  }
  ._1danmg7gb {
    flex-direction: column;
  }
  ._1danmg7gf {
    flex-direction: column-reverse;
  }
  ._1danmg7gj {
    flex-wrap: wrap;
  }
  ._1danmg7gn {
    flex-wrap: nowrap;
  }
  ._1danmg7gr {
    flex-shrink: 0;
  }
  ._1danmg7gv {
    flex-grow: 0;
  }
  ._1danmg7gz {
    flex-grow: 1;
  }
  ._1danmg7h3 {
    text-align: left;
  }
  ._1danmg7h7 {
    text-align: center;
  }
  ._1danmg7hb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1danmg74w {
    display: none;
  }
  ._1danmg750 {
    display: block;
  }
  ._1danmg754 {
    display: inline;
  }
  ._1danmg758 {
    display: inline-block;
  }
  ._1danmg75c {
    display: flex;
  }
  ._1danmg75g {
    position: relative;
  }
  ._1danmg75k {
    position: absolute;
  }
  ._1danmg75o {
    position: fixed;
  }
  ._1danmg75s {
    border-radius: 0;
  }
  ._1danmg75w {
    border-radius: 9999px;
  }
  ._1danmg760 {
    border-radius: var(--_14jajmnb);
  }
  ._1danmg764 {
    border-radius: var(--_14jajmnc);
  }
  ._1danmg768 {
    border-radius: var(--_14jajmnd);
  }
  ._1danmg76c {
    border-radius: var(--_14jajmne);
  }
  ._1danmg76g {
    padding-top: var(--_14jajmn0);
  }
  ._1danmg76k {
    padding-top: var(--_14jajmn1);
  }
  ._1danmg76o {
    padding-top: var(--_14jajmn2);
  }
  ._1danmg76s {
    padding-top: var(--_14jajmn3);
  }
  ._1danmg76w {
    padding-top: var(--_14jajmn4);
  }
  ._1danmg770 {
    padding-top: var(--_14jajmn5);
  }
  ._1danmg774 {
    padding-top: var(--_14jajmn6);
  }
  ._1danmg778 {
    padding-top: var(--_14jajmn7);
  }
  ._1danmg77c {
    padding-top: var(--_14jajmn8);
  }
  ._1danmg77g {
    padding-top: 0;
  }
  ._1danmg77k {
    padding-bottom: var(--_14jajmn0);
  }
  ._1danmg77o {
    padding-bottom: var(--_14jajmn1);
  }
  ._1danmg77s {
    padding-bottom: var(--_14jajmn2);
  }
  ._1danmg77w {
    padding-bottom: var(--_14jajmn3);
  }
  ._1danmg780 {
    padding-bottom: var(--_14jajmn4);
  }
  ._1danmg784 {
    padding-bottom: var(--_14jajmn5);
  }
  ._1danmg788 {
    padding-bottom: var(--_14jajmn6);
  }
  ._1danmg78c {
    padding-bottom: var(--_14jajmn7);
  }
  ._1danmg78g {
    padding-bottom: var(--_14jajmn8);
  }
  ._1danmg78k {
    padding-bottom: 0;
  }
  ._1danmg78o {
    padding-right: var(--_14jajmn0);
  }
  ._1danmg78s {
    padding-right: var(--_14jajmn1);
  }
  ._1danmg78w {
    padding-right: var(--_14jajmn2);
  }
  ._1danmg790 {
    padding-right: var(--_14jajmn3);
  }
  ._1danmg794 {
    padding-right: var(--_14jajmn4);
  }
  ._1danmg798 {
    padding-right: var(--_14jajmn5);
  }
  ._1danmg79c {
    padding-right: var(--_14jajmn6);
  }
  ._1danmg79g {
    padding-right: var(--_14jajmn7);
  }
  ._1danmg79k {
    padding-right: var(--_14jajmn8);
  }
  ._1danmg79o {
    padding-right: 0;
  }
  ._1danmg79s {
    padding-left: var(--_14jajmn0);
  }
  ._1danmg79w {
    padding-left: var(--_14jajmn1);
  }
  ._1danmg7a0 {
    padding-left: var(--_14jajmn2);
  }
  ._1danmg7a4 {
    padding-left: var(--_14jajmn3);
  }
  ._1danmg7a8 {
    padding-left: var(--_14jajmn4);
  }
  ._1danmg7ac {
    padding-left: var(--_14jajmn5);
  }
  ._1danmg7ag {
    padding-left: var(--_14jajmn6);
  }
  ._1danmg7ak {
    padding-left: var(--_14jajmn7);
  }
  ._1danmg7ao {
    padding-left: var(--_14jajmn8);
  }
  ._1danmg7as {
    padding-left: 0;
  }
  ._1danmg7aw {
    margin-top: var(--_14jajmn0);
  }
  ._1danmg7b0 {
    margin-top: var(--_14jajmn1);
  }
  ._1danmg7b4 {
    margin-top: var(--_14jajmn2);
  }
  ._1danmg7b8 {
    margin-top: var(--_14jajmn3);
  }
  ._1danmg7bc {
    margin-top: var(--_14jajmn4);
  }
  ._1danmg7bg {
    margin-top: var(--_14jajmn5);
  }
  ._1danmg7bk {
    margin-top: var(--_14jajmn6);
  }
  ._1danmg7bo {
    margin-top: var(--_14jajmn7);
  }
  ._1danmg7bs {
    margin-top: var(--_14jajmn8);
  }
  ._1danmg7bw {
    margin-top: 0;
  }
  ._1danmg7c0 {
    margin-bottom: var(--_14jajmn0);
  }
  ._1danmg7c4 {
    margin-bottom: var(--_14jajmn1);
  }
  ._1danmg7c8 {
    margin-bottom: var(--_14jajmn2);
  }
  ._1danmg7cc {
    margin-bottom: var(--_14jajmn3);
  }
  ._1danmg7cg {
    margin-bottom: var(--_14jajmn4);
  }
  ._1danmg7ck {
    margin-bottom: var(--_14jajmn5);
  }
  ._1danmg7co {
    margin-bottom: var(--_14jajmn6);
  }
  ._1danmg7cs {
    margin-bottom: var(--_14jajmn7);
  }
  ._1danmg7cw {
    margin-bottom: var(--_14jajmn8);
  }
  ._1danmg7d0 {
    margin-bottom: 0;
  }
  ._1danmg7d4 {
    margin-right: var(--_14jajmn0);
  }
  ._1danmg7d8 {
    margin-right: var(--_14jajmn1);
  }
  ._1danmg7dc {
    margin-right: var(--_14jajmn2);
  }
  ._1danmg7dg {
    margin-right: var(--_14jajmn3);
  }
  ._1danmg7dk {
    margin-right: var(--_14jajmn4);
  }
  ._1danmg7do {
    margin-right: var(--_14jajmn5);
  }
  ._1danmg7ds {
    margin-right: var(--_14jajmn6);
  }
  ._1danmg7dw {
    margin-right: var(--_14jajmn7);
  }
  ._1danmg7e0 {
    margin-right: var(--_14jajmn8);
  }
  ._1danmg7e4 {
    margin-right: 0;
  }
  ._1danmg7e8 {
    margin-left: var(--_14jajmn0);
  }
  ._1danmg7ec {
    margin-left: var(--_14jajmn1);
  }
  ._1danmg7eg {
    margin-left: var(--_14jajmn2);
  }
  ._1danmg7ek {
    margin-left: var(--_14jajmn3);
  }
  ._1danmg7eo {
    margin-left: var(--_14jajmn4);
  }
  ._1danmg7es {
    margin-left: var(--_14jajmn5);
  }
  ._1danmg7ew {
    margin-left: var(--_14jajmn6);
  }
  ._1danmg7f0 {
    margin-left: var(--_14jajmn7);
  }
  ._1danmg7f4 {
    margin-left: var(--_14jajmn8);
  }
  ._1danmg7f8 {
    margin-left: 0;
  }
  ._1danmg7fc {
    align-items: flex-start;
  }
  ._1danmg7fg {
    align-items: center;
  }
  ._1danmg7fk {
    align-items: flex-end;
  }
  ._1danmg7fo {
    justify-content: flex-start;
  }
  ._1danmg7fs {
    justify-content: center;
  }
  ._1danmg7fw {
    justify-content: flex-end;
  }
  ._1danmg7g0 {
    justify-content: space-between;
  }
  ._1danmg7g4 {
    flex-direction: row;
  }
  ._1danmg7g8 {
    flex-direction: row-reverse;
  }
  ._1danmg7gc {
    flex-direction: column;
  }
  ._1danmg7gg {
    flex-direction: column-reverse;
  }
  ._1danmg7gk {
    flex-wrap: wrap;
  }
  ._1danmg7go {
    flex-wrap: nowrap;
  }
  ._1danmg7gs {
    flex-shrink: 0;
  }
  ._1danmg7gw {
    flex-grow: 0;
  }
  ._1danmg7h0 {
    flex-grow: 1;
  }
  ._1danmg7h4 {
    text-align: left;
  }
  ._1danmg7h8 {
    text-align: center;
  }
  ._1danmg7hc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1danmg74x {
    display: none;
  }
  ._1danmg751 {
    display: block;
  }
  ._1danmg755 {
    display: inline;
  }
  ._1danmg759 {
    display: inline-block;
  }
  ._1danmg75d {
    display: flex;
  }
  ._1danmg75h {
    position: relative;
  }
  ._1danmg75l {
    position: absolute;
  }
  ._1danmg75p {
    position: fixed;
  }
  ._1danmg75t {
    border-radius: 0;
  }
  ._1danmg75x {
    border-radius: 9999px;
  }
  ._1danmg761 {
    border-radius: var(--_14jajmnb);
  }
  ._1danmg765 {
    border-radius: var(--_14jajmnc);
  }
  ._1danmg769 {
    border-radius: var(--_14jajmnd);
  }
  ._1danmg76d {
    border-radius: var(--_14jajmne);
  }
  ._1danmg76h {
    padding-top: var(--_14jajmn0);
  }
  ._1danmg76l {
    padding-top: var(--_14jajmn1);
  }
  ._1danmg76p {
    padding-top: var(--_14jajmn2);
  }
  ._1danmg76t {
    padding-top: var(--_14jajmn3);
  }
  ._1danmg76x {
    padding-top: var(--_14jajmn4);
  }
  ._1danmg771 {
    padding-top: var(--_14jajmn5);
  }
  ._1danmg775 {
    padding-top: var(--_14jajmn6);
  }
  ._1danmg779 {
    padding-top: var(--_14jajmn7);
  }
  ._1danmg77d {
    padding-top: var(--_14jajmn8);
  }
  ._1danmg77h {
    padding-top: 0;
  }
  ._1danmg77l {
    padding-bottom: var(--_14jajmn0);
  }
  ._1danmg77p {
    padding-bottom: var(--_14jajmn1);
  }
  ._1danmg77t {
    padding-bottom: var(--_14jajmn2);
  }
  ._1danmg77x {
    padding-bottom: var(--_14jajmn3);
  }
  ._1danmg781 {
    padding-bottom: var(--_14jajmn4);
  }
  ._1danmg785 {
    padding-bottom: var(--_14jajmn5);
  }
  ._1danmg789 {
    padding-bottom: var(--_14jajmn6);
  }
  ._1danmg78d {
    padding-bottom: var(--_14jajmn7);
  }
  ._1danmg78h {
    padding-bottom: var(--_14jajmn8);
  }
  ._1danmg78l {
    padding-bottom: 0;
  }
  ._1danmg78p {
    padding-right: var(--_14jajmn0);
  }
  ._1danmg78t {
    padding-right: var(--_14jajmn1);
  }
  ._1danmg78x {
    padding-right: var(--_14jajmn2);
  }
  ._1danmg791 {
    padding-right: var(--_14jajmn3);
  }
  ._1danmg795 {
    padding-right: var(--_14jajmn4);
  }
  ._1danmg799 {
    padding-right: var(--_14jajmn5);
  }
  ._1danmg79d {
    padding-right: var(--_14jajmn6);
  }
  ._1danmg79h {
    padding-right: var(--_14jajmn7);
  }
  ._1danmg79l {
    padding-right: var(--_14jajmn8);
  }
  ._1danmg79p {
    padding-right: 0;
  }
  ._1danmg79t {
    padding-left: var(--_14jajmn0);
  }
  ._1danmg79x {
    padding-left: var(--_14jajmn1);
  }
  ._1danmg7a1 {
    padding-left: var(--_14jajmn2);
  }
  ._1danmg7a5 {
    padding-left: var(--_14jajmn3);
  }
  ._1danmg7a9 {
    padding-left: var(--_14jajmn4);
  }
  ._1danmg7ad {
    padding-left: var(--_14jajmn5);
  }
  ._1danmg7ah {
    padding-left: var(--_14jajmn6);
  }
  ._1danmg7al {
    padding-left: var(--_14jajmn7);
  }
  ._1danmg7ap {
    padding-left: var(--_14jajmn8);
  }
  ._1danmg7at {
    padding-left: 0;
  }
  ._1danmg7ax {
    margin-top: var(--_14jajmn0);
  }
  ._1danmg7b1 {
    margin-top: var(--_14jajmn1);
  }
  ._1danmg7b5 {
    margin-top: var(--_14jajmn2);
  }
  ._1danmg7b9 {
    margin-top: var(--_14jajmn3);
  }
  ._1danmg7bd {
    margin-top: var(--_14jajmn4);
  }
  ._1danmg7bh {
    margin-top: var(--_14jajmn5);
  }
  ._1danmg7bl {
    margin-top: var(--_14jajmn6);
  }
  ._1danmg7bp {
    margin-top: var(--_14jajmn7);
  }
  ._1danmg7bt {
    margin-top: var(--_14jajmn8);
  }
  ._1danmg7bx {
    margin-top: 0;
  }
  ._1danmg7c1 {
    margin-bottom: var(--_14jajmn0);
  }
  ._1danmg7c5 {
    margin-bottom: var(--_14jajmn1);
  }
  ._1danmg7c9 {
    margin-bottom: var(--_14jajmn2);
  }
  ._1danmg7cd {
    margin-bottom: var(--_14jajmn3);
  }
  ._1danmg7ch {
    margin-bottom: var(--_14jajmn4);
  }
  ._1danmg7cl {
    margin-bottom: var(--_14jajmn5);
  }
  ._1danmg7cp {
    margin-bottom: var(--_14jajmn6);
  }
  ._1danmg7ct {
    margin-bottom: var(--_14jajmn7);
  }
  ._1danmg7cx {
    margin-bottom: var(--_14jajmn8);
  }
  ._1danmg7d1 {
    margin-bottom: 0;
  }
  ._1danmg7d5 {
    margin-right: var(--_14jajmn0);
  }
  ._1danmg7d9 {
    margin-right: var(--_14jajmn1);
  }
  ._1danmg7dd {
    margin-right: var(--_14jajmn2);
  }
  ._1danmg7dh {
    margin-right: var(--_14jajmn3);
  }
  ._1danmg7dl {
    margin-right: var(--_14jajmn4);
  }
  ._1danmg7dp {
    margin-right: var(--_14jajmn5);
  }
  ._1danmg7dt {
    margin-right: var(--_14jajmn6);
  }
  ._1danmg7dx {
    margin-right: var(--_14jajmn7);
  }
  ._1danmg7e1 {
    margin-right: var(--_14jajmn8);
  }
  ._1danmg7e5 {
    margin-right: 0;
  }
  ._1danmg7e9 {
    margin-left: var(--_14jajmn0);
  }
  ._1danmg7ed {
    margin-left: var(--_14jajmn1);
  }
  ._1danmg7eh {
    margin-left: var(--_14jajmn2);
  }
  ._1danmg7el {
    margin-left: var(--_14jajmn3);
  }
  ._1danmg7ep {
    margin-left: var(--_14jajmn4);
  }
  ._1danmg7et {
    margin-left: var(--_14jajmn5);
  }
  ._1danmg7ex {
    margin-left: var(--_14jajmn6);
  }
  ._1danmg7f1 {
    margin-left: var(--_14jajmn7);
  }
  ._1danmg7f5 {
    margin-left: var(--_14jajmn8);
  }
  ._1danmg7f9 {
    margin-left: 0;
  }
  ._1danmg7fd {
    align-items: flex-start;
  }
  ._1danmg7fh {
    align-items: center;
  }
  ._1danmg7fl {
    align-items: flex-end;
  }
  ._1danmg7fp {
    justify-content: flex-start;
  }
  ._1danmg7ft {
    justify-content: center;
  }
  ._1danmg7fx {
    justify-content: flex-end;
  }
  ._1danmg7g1 {
    justify-content: space-between;
  }
  ._1danmg7g5 {
    flex-direction: row;
  }
  ._1danmg7g9 {
    flex-direction: row-reverse;
  }
  ._1danmg7gd {
    flex-direction: column;
  }
  ._1danmg7gh {
    flex-direction: column-reverse;
  }
  ._1danmg7gl {
    flex-wrap: wrap;
  }
  ._1danmg7gp {
    flex-wrap: nowrap;
  }
  ._1danmg7gt {
    flex-shrink: 0;
  }
  ._1danmg7gx {
    flex-grow: 0;
  }
  ._1danmg7h1 {
    flex-grow: 1;
  }
  ._1danmg7h5 {
    text-align: left;
  }
  ._1danmg7h9 {
    text-align: center;
  }
  ._1danmg7hd {
    text-align: right;
  }
}
.m3vcy34 {
  font-size: var(--m3vcy30);
  line-height: var(--m3vcy31);
}
.m3vcy34:before {
  content: "";
  display: table;
  margin-bottom: var(--m3vcy32);
}
.m3vcy34:after {
  content: "";
  display: table;
  margin-top: var(--m3vcy33);
}
._1y2ixaa0 {
  font-family: var(--_14jajmn2w);
}
._1y2ixaa1 {
  font-weight: var(--_14jajmn46);
}
._1y2ixaa2 {
  font-weight: var(--_14jajmn47);
}
._1y2ixaa3 {
  font-weight: var(--_14jajmn48);
}
._1y2ixaa4 {
  --m3vcy30: var(--_14jajmn32);
  --m3vcy31: var(--_14jajmn33);
  --m3vcy32: var(--_14jajmn35);
  --m3vcy33: var(--_14jajmn36);
}
._1y2ixaa7 {
  --m3vcy30: var(--_14jajmn3c);
  --m3vcy31: var(--_14jajmn3d);
  --m3vcy32: var(--_14jajmn3f);
  --m3vcy33: var(--_14jajmn3g);
}
._1y2ixaaa {
  --m3vcy30: var(--_14jajmn3m);
  --m3vcy31: var(--_14jajmn3n);
  --m3vcy32: var(--_14jajmn3p);
  --m3vcy33: var(--_14jajmn3q);
}
._1y2ixaad {
  --m3vcy30: var(--_14jajmn3w);
  --m3vcy31: var(--_14jajmn3x);
  --m3vcy32: var(--_14jajmn3z);
  --m3vcy33: var(--_14jajmn40);
}
._1y2ixaag {
  font-size: var(--_14jajmn32);
  line-height: var(--_14jajmn33);
}
._1y2ixaah {
  font-size: var(--_14jajmn3c);
  line-height: var(--_14jajmn3d);
}
._1y2ixaai {
  font-size: var(--_14jajmn3m);
  line-height: var(--_14jajmn3n);
}
._1y2ixaaj {
  font-size: var(--_14jajmn3w);
  line-height: var(--_14jajmn3x);
}
._1y2ixaak {
  font-weight: var(--_14jajmn5d);
}
._1y2ixaal {
  font-weight: var(--_14jajmn5e);
}
._1y2ixaam {
  --m3vcy30: var(--_14jajmn49);
  --m3vcy31: var(--_14jajmn4a);
  --m3vcy32: var(--_14jajmn4c);
  --m3vcy33: var(--_14jajmn4d);
}
._1y2ixaap {
  --m3vcy30: var(--_14jajmn4j);
  --m3vcy31: var(--_14jajmn4k);
  --m3vcy32: var(--_14jajmn4m);
  --m3vcy33: var(--_14jajmn4n);
}
._1y2ixaas {
  --m3vcy30: var(--_14jajmn4t);
  --m3vcy31: var(--_14jajmn4u);
  --m3vcy32: var(--_14jajmn4w);
  --m3vcy33: var(--_14jajmn4x);
}
._1y2ixaav {
  --m3vcy30: var(--_14jajmn53);
  --m3vcy31: var(--_14jajmn54);
  --m3vcy32: var(--_14jajmn56);
  --m3vcy33: var(--_14jajmn57);
}
html:not(._1danmg7z) ._1y2ixaa18 {
  --_1y2ixaay: var(--_14jajmn19);
  --_1y2ixaaz: var(--_14jajmn17);
  --_1y2ixaa10: var(--_14jajmn1d);
  --_1y2ixaa11: var(--_14jajmn1o);
  --_1y2ixaa12: var(--_14jajmn1m);
  --_1y2ixaa13: var(--_14jajmn15);
  --_1y2ixaa14: var(--_14jajmn1b);
  --_1y2ixaa15: var(--_14jajmn1k);
  --_1y2ixaa16: var(--_14jajmn1r);
  --_1y2ixaa17: var(--_14jajmn1f);
}
html:not(._1danmg7z) ._1y2ixaa19 {
  --_1y2ixaay: var(--_14jajmn1a);
  --_1y2ixaaz: var(--_14jajmn18);
  --_1y2ixaa10: var(--_14jajmn1e);
  --_1y2ixaa11: var(--_14jajmn1p);
  --_1y2ixaa12: var(--_14jajmn1n);
  --_1y2ixaa13: var(--_14jajmn16);
  --_1y2ixaa14: var(--_14jajmn1c);
  --_1y2ixaa15: var(--_14jajmn1l);
  --_1y2ixaa16: var(--_14jajmn1s);
  --_1y2ixaa17: var(--_14jajmn1h);
}
html._1danmg7z ._1y2ixaa1a {
  --_1y2ixaay: var(--_14jajmn19);
  --_1y2ixaaz: var(--_14jajmn17);
  --_1y2ixaa10: var(--_14jajmn1d);
  --_1y2ixaa11: var(--_14jajmn1o);
  --_1y2ixaa12: var(--_14jajmn1m);
  --_1y2ixaa13: var(--_14jajmn15);
  --_1y2ixaa14: var(--_14jajmn1b);
  --_1y2ixaa15: var(--_14jajmn1k);
  --_1y2ixaa16: var(--_14jajmn1r);
  --_1y2ixaa17: var(--_14jajmn1f);
}
html._1danmg7z ._1y2ixaa1b {
  --_1y2ixaay: var(--_14jajmn1a);
  --_1y2ixaaz: var(--_14jajmn18);
  --_1y2ixaa10: var(--_14jajmn1e);
  --_1y2ixaa11: var(--_14jajmn1p);
  --_1y2ixaa12: var(--_14jajmn1n);
  --_1y2ixaa13: var(--_14jajmn16);
  --_1y2ixaa14: var(--_14jajmn1c);
  --_1y2ixaa15: var(--_14jajmn1l);
  --_1y2ixaa16: var(--_14jajmn1s);
  --_1y2ixaa17: var(--_14jajmn1h);
}
html:not(._1danmg7z) ._1y2ixaa1c,
html:not(._1danmg7z) ._1y2ixaa1d,
html:not(._1danmg7z) ._1y2ixaa1e,
html:not(._1danmg7z) ._1y2ixaa1f {
  --_1y2ixaa15: var(--_1y2ixaay);
}
html:not(._1danmg7z) ._1y2ixaa1g,
html:not(._1danmg7z) ._1y2ixaa1h {
  --_1y2ixaa15: var(--_1y2ixaaz);
}
html:not(._1danmg7z) ._1y2ixaa1i {
  --_1y2ixaa15: var(--_1y2ixaa12);
}
html:not(._1danmg7z) ._1y2ixaa1j {
  --_1y2ixaa15: var(--_1y2ixaa10);
}
html:not(._1danmg7z) ._1y2ixaa1k {
  --_1y2ixaa15: var(--_1y2ixaa11);
}
html._1danmg7z ._1y2ixaa1l,
html._1danmg7z ._1y2ixaa1m,
html._1danmg7z ._1y2ixaa1n,
html._1danmg7z ._1y2ixaa1o {
  --_1y2ixaa15: var(--_1y2ixaay);
}
html._1danmg7z ._1y2ixaa1p,
html._1danmg7z ._1y2ixaa1q {
  --_1y2ixaa15: var(--_1y2ixaaz);
}
html._1danmg7z ._1y2ixaa1r {
  --_1y2ixaa15: var(--_1y2ixaa12);
}
html._1danmg7z ._1y2ixaa1s {
  --_1y2ixaa15: var(--_1y2ixaa10);
}
html._1danmg7z ._1y2ixaa1t {
  --_1y2ixaa15: var(--_1y2ixaa11);
}
._1y2ixaa1u {
  color: var(--_1y2ixaay);
}
._1y2ixaa1v {
  color: var(--_1y2ixaaz);
}
._1y2ixaa1w {
  color: var(--_1y2ixaa10);
}
._1y2ixaa1x {
  color: var(--_1y2ixaa11);
}
._1y2ixaa1y {
  color: var(--_1y2ixaa12);
}
._1y2ixaa1z {
  color: var(--_1y2ixaa13);
}
._1y2ixaa20 {
  color: var(--_1y2ixaa14);
}
._1y2ixaa21 {
  color: var(--_1y2ixaa15);
}
._1y2ixaa22 {
  color: var(--_1y2ixaa16);
}
._1y2ixaa23 {
  color: var(--_1y2ixaa17);
}
._1y2ixaa24 {
  padding-bottom: calc((var(--_14jajmn9) - var(--_14jajmn33)) / 2);
  padding-top: calc((var(--_14jajmn9) - var(--_14jajmn33)) / 2);
}
._1y2ixaa25 {
  padding-bottom: calc((var(--_14jajmn9) - var(--_14jajmn3d)) / 2);
  padding-top: calc((var(--_14jajmn9) - var(--_14jajmn3d)) / 2);
}
._1y2ixaa26 {
  padding-bottom: calc((var(--_14jajmn9) - var(--_14jajmn3n)) / 2);
  padding-top: calc((var(--_14jajmn9) - var(--_14jajmn3n)) / 2);
}
._1y2ixaa27 {
  padding-bottom: calc((var(--_14jajmn9) - var(--_14jajmn3x)) / 2);
  padding-top: calc((var(--_14jajmn9) - var(--_14jajmn3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1y2ixaa4 {
    --m3vcy30: var(--_14jajmn37);
    --m3vcy31: var(--_14jajmn38);
    --m3vcy32: var(--_14jajmn3a);
    --m3vcy33: var(--_14jajmn3b);
  }
  ._1y2ixaa7 {
    --m3vcy30: var(--_14jajmn3h);
    --m3vcy31: var(--_14jajmn3i);
    --m3vcy32: var(--_14jajmn3k);
    --m3vcy33: var(--_14jajmn3l);
  }
  ._1y2ixaaa {
    --m3vcy30: var(--_14jajmn3r);
    --m3vcy31: var(--_14jajmn3s);
    --m3vcy32: var(--_14jajmn3u);
    --m3vcy33: var(--_14jajmn3v);
  }
  ._1y2ixaad {
    --m3vcy30: var(--_14jajmn41);
    --m3vcy31: var(--_14jajmn42);
    --m3vcy32: var(--_14jajmn44);
    --m3vcy33: var(--_14jajmn45);
  }
  ._1y2ixaag {
    font-size: var(--_14jajmn37);
    line-height: var(--_14jajmn38);
  }
  ._1y2ixaah {
    font-size: var(--_14jajmn3h);
    line-height: var(--_14jajmn3i);
  }
  ._1y2ixaai {
    font-size: var(--_14jajmn3r);
    line-height: var(--_14jajmn3s);
  }
  ._1y2ixaaj {
    font-size: var(--_14jajmn41);
    line-height: var(--_14jajmn42);
  }
  ._1y2ixaam {
    --m3vcy30: var(--_14jajmn4e);
    --m3vcy31: var(--_14jajmn4f);
    --m3vcy32: var(--_14jajmn4h);
    --m3vcy33: var(--_14jajmn4i);
  }
  ._1y2ixaap {
    --m3vcy30: var(--_14jajmn4o);
    --m3vcy31: var(--_14jajmn4p);
    --m3vcy32: var(--_14jajmn4r);
    --m3vcy33: var(--_14jajmn4s);
  }
  ._1y2ixaas {
    --m3vcy30: var(--_14jajmn4y);
    --m3vcy31: var(--_14jajmn4z);
    --m3vcy32: var(--_14jajmn51);
    --m3vcy33: var(--_14jajmn52);
  }
  ._1y2ixaav {
    --m3vcy30: var(--_14jajmn58);
    --m3vcy31: var(--_14jajmn59);
    --m3vcy32: var(--_14jajmn5b);
    --m3vcy33: var(--_14jajmn5c);
  }
  ._1y2ixaa24 {
    padding-bottom: calc((var(--_14jajmn9) - var(--_14jajmn38)) / 2);
    padding-top: calc((var(--_14jajmn9) - var(--_14jajmn38)) / 2);
  }
  ._1y2ixaa25 {
    padding-bottom: calc((var(--_14jajmn9) - var(--_14jajmn3i)) / 2);
    padding-top: calc((var(--_14jajmn9) - var(--_14jajmn3i)) / 2);
  }
  ._1y2ixaa26 {
    padding-bottom: calc((var(--_14jajmn9) - var(--_14jajmn3s)) / 2);
    padding-top: calc((var(--_14jajmn9) - var(--_14jajmn3s)) / 2);
  }
  ._1y2ixaa27 {
    padding-bottom: calc((var(--_14jajmn9) - var(--_14jajmn42)) / 2);
    padding-top: calc((var(--_14jajmn9) - var(--_14jajmn42)) / 2);
  }
}
.pqedlg0 {
  --_14jajmn0: 24px;
  --_14jajmn1: 4px;
  --_14jajmn2: 8px;
  --_14jajmn3: 12px;
  --_14jajmn4: 20px;
  --_14jajmn5: 32px;
  --_14jajmn6: 48px;
  --_14jajmn7: 96px;
  --_14jajmn8: 120px;
  --_14jajmn9: 44px;
  --_14jajmna: 4px;
  --_14jajmnb: 2px;
  --_14jajmnc: 4px;
  --_14jajmnd: 6px;
  --_14jajmne: 10px;
  --_14jajmnf: #e60278;
  --_14jajmng: #f8b1dc;
  --_14jajmnh: #fdc221;
  --_14jajmni: #fee384;
  --_14jajmnj: #b91e1e;
  --_14jajmnk: #fb999a;
  --_14jajmnl: #838fa5;
  --_14jajmnm: rgba(159, 176, 245, 0.7);
  --_14jajmnn: #4964e9;
  --_14jajmno: #9fb0f5;
  --_14jajmnp: #1d559d;
  --_14jajmnq: #98c9f1;
  --_14jajmnr: #2e3849;
  --_14jajmnt: #d2d7df;
  --_14jajmns: #fff;
  --_14jajmnu: #12784f;
  --_14jajmnv: #8bdec5;
  --_14jajmnw: #512eaa;
  --_14jajmnx: #c6acf5;
  --_14jajmny: 1px;
  --_14jajmnz: 2px;
  --_14jajmn10: 3px;
  --_14jajmn11: 400px;
  --_14jajmn12: 660px;
  --_14jajmn13: 940px;
  --_14jajmn14: 1280px;
  --_14jajmn15: #e60278;
  --_14jajmn16: #f8b1dc;
  --_14jajmn17: #723d02;
  --_14jajmn18: #fee384;
  --_14jajmn19: #b91e1e;
  --_14jajmn1a: #fb999a;
  --_14jajmn1b: #4964e9;
  --_14jajmn1c: #9fb0f5;
  --_14jajmn1d: #1d559d;
  --_14jajmn1e: #98c9f1;
  --_14jajmn1f: #4964e9;
  --_14jajmn1h: #9fb0f5;
  --_14jajmn1g: #4964e9;
  --_14jajmn1i: #512eaa;
  --_14jajmn1j: #c6acf5;
  --_14jajmn1k: #2e3849;
  --_14jajmn1l: #fff;
  --_14jajmn1m: #12784f;
  --_14jajmn1n: #8bdec5;
  --_14jajmn1o: #512eaa;
  --_14jajmn1p: #c6acf5;
  --_14jajmn1q: #f57c00;
  --_14jajmn1r: #5a6881;
  --_14jajmn1s: hsla(0, 0%, 100%, 0.65);
  --_14jajmn1t: #f7f8fb;
  --_14jajmn1u: #0e131b;
  --_14jajmn1v: #0d3880;
  --_14jajmn1w: #e60278;
  --_14jajmn1x: #cd026b;
  --_14jajmn1y: #fd0585;
  --_14jajmn1z: #feeffa;
  --_14jajmn20: #fdd7f3;
  --_14jajmn21: #fde3f6;
  --_14jajmn22: #fdc221;
  --_14jajmn23: #fef8de;
  --_14jajmn24: #b91e1e;
  --_14jajmn25: #a31a1a;
  --_14jajmn26: #db1616;
  --_14jajmn27: #ffe3e2;
  --_14jajmn28: #fef3f3;
  --_14jajmn29: #fcdbdb;
  --_14jajmn2a: #fde7e7;
  --_14jajmn2b: #4964e9;
  --_14jajmn2c: #3251e6;
  --_14jajmn2d: #5975ff;
  --_14jajmn2e: #f4f6fe;
  --_14jajmn2f: #dde3fc;
  --_14jajmn2g: #e8ecfd;
  --_14jajmn2h: #1d559d;
  --_14jajmn2i: #e3f2fb;
  --_14jajmn2j: #2e3849;
  --_14jajmn2k: #242c39;
  --_14jajmn2l: #384459;
  --_14jajmn2m: #eaecf1;
  --_14jajmn2n: #f7f8fb;
  --_14jajmn2o: #e6e9f3;
  --_14jajmn2p: #eff1f7;
  --_14jajmn2q: #12784f;
  --_14jajmn2r: #e2f7f1;
  --_14jajmn2s: #512eaa;
  --_14jajmn2t: #f1e8fd;
  --_14jajmn2u: #fff;
  --_14jajmn2v: #1c2330;
  --_14jajmn2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --_14jajmn2x: 1456;
  --_14jajmn2y: 1900;
  --_14jajmn2z: -500;
  --_14jajmn30: 0;
  --_14jajmn31: 2048;
  --_14jajmn32: 12px;
  --_14jajmn33: 20px;
  --_14jajmn34: 8.5313px;
  --_14jajmn35: -0.4642em;
  --_14jajmn36: -0.4915em;
  --_14jajmn37: 12px;
  --_14jajmn38: 20px;
  --_14jajmn39: 8.5313px;
  --_14jajmn3a: -0.4642em;
  --_14jajmn3b: -0.4915em;
  --_14jajmn3c: 14px;
  --_14jajmn3d: 20px;
  --_14jajmn3e: 9.9531px;
  --_14jajmn3f: -0.3451em;
  --_14jajmn3g: -0.3725em;
  --_14jajmn3h: 14px;
  --_14jajmn3i: 20px;
  --_14jajmn3j: 9.9531px;
  --_14jajmn3k: -0.3451em;
  --_14jajmn3l: -0.3725em;
  --_14jajmn3m: 16px;
  --_14jajmn3n: 24px;
  --_14jajmn3o: 11.375px;
  --_14jajmn3p: -0.3809em;
  --_14jajmn3q: -0.4082em;
  --_14jajmn3r: 16px;
  --_14jajmn3s: 24px;
  --_14jajmn3t: 11.375px;
  --_14jajmn3u: -0.3809em;
  --_14jajmn3v: -0.4082em;
  --_14jajmn3w: 18px;
  --_14jajmn3x: 28px;
  --_14jajmn3y: 12.7969px;
  --_14jajmn3z: -0.4086em;
  --_14jajmn40: -0.436em;
  --_14jajmn41: 18px;
  --_14jajmn42: 28px;
  --_14jajmn43: 12.7969px;
  --_14jajmn44: -0.4086em;
  --_14jajmn45: -0.436em;
  --_14jajmn46: 400;
  --_14jajmn47: 600;
  --_14jajmn48: 700;
  --_14jajmn49: 28px;
  --_14jajmn4a: 36px;
  --_14jajmn4b: 19.9063px;
  --_14jajmn4c: -0.2737em;
  --_14jajmn4d: -0.3011em;
  --_14jajmn4e: 42px;
  --_14jajmn4f: 44px;
  --_14jajmn4g: 29.8594px;
  --_14jajmn4h: -0.1547em;
  --_14jajmn4i: -0.182em;
  --_14jajmn4j: 21px;
  --_14jajmn4k: 32px;
  --_14jajmn4l: 14.9297px;
  --_14jajmn4m: -0.3928em;
  --_14jajmn4n: -0.4201em;
  --_14jajmn4o: 28px;
  --_14jajmn4p: 36px;
  --_14jajmn4q: 19.9063px;
  --_14jajmn4r: -0.2737em;
  --_14jajmn4s: -0.3011em;
  --_14jajmn4t: 21px;
  --_14jajmn4u: 28px;
  --_14jajmn4v: 14.9297px;
  --_14jajmn4w: -0.2975em;
  --_14jajmn4x: -0.3249em;
  --_14jajmn4y: 21px;
  --_14jajmn4z: 28px;
  --_14jajmn50: 14.9297px;
  --_14jajmn51: -0.2975em;
  --_14jajmn52: -0.3249em;
  --_14jajmn53: 18px;
  --_14jajmn54: 28px;
  --_14jajmn55: 12.7969px;
  --_14jajmn56: -0.4086em;
  --_14jajmn57: -0.436em;
  --_14jajmn58: 18px;
  --_14jajmn59: 28px;
  --_14jajmn5a: 12.7969px;
  --_14jajmn5b: -0.4086em;
  --_14jajmn5c: -0.436em;
  --_14jajmn5d: 400;
  --_14jajmn5e: 600;
  --_14jajmn5f: none;
  --_14jajmn5g: 24px;
  --_14jajmn5h: 20px;
  --_14jajmn5i: transform 0.125s ease, opacity 0.125s ease;
  --_14jajmn5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_14jajmn5k: scale(0.95);
  --_14jajmn5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_14jajmn5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_14jajmn5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._1kz0ah36 {
  background: var(--_1kz0ah30);
}
._1kz0ah37 {
  background: var(--_1kz0ah31);
}
._1kz0ah38 {
  background: var(--_1kz0ah32);
}
._1kz0ah39 {
  background: var(--_1kz0ah33);
}
._1kz0ah3a {
  background: var(--_1kz0ah34);
}
._1kz0ah3b {
  background: var(--_1kz0ah35);
}
html:not(._1danmg7z) ._1kz0ah3c {
  --_1kz0ah30: var(--_14jajmnw);
  --_1kz0ah31: var(--_14jajmnp);
  --_1kz0ah32: var(--_14jajmnu);
  --_1kz0ah33: var(--_14jajmnh);
  --_1kz0ah34: var(--_14jajmnj);
  --_1kz0ah35: var(--_14jajmnn);
}
html:not(._1danmg7z) ._1kz0ah3d {
  --_1kz0ah30: var(--_14jajmnx);
  --_1kz0ah31: var(--_14jajmnq);
  --_1kz0ah32: var(--_14jajmnv);
  --_1kz0ah33: var(--_14jajmni);
  --_1kz0ah34: var(--_14jajmnk);
  --_1kz0ah35: var(--_14jajmno);
}
html._1danmg7z ._1kz0ah3e {
  --_1kz0ah30: var(--_14jajmnw);
  --_1kz0ah31: var(--_14jajmnp);
  --_1kz0ah32: var(--_14jajmnu);
  --_1kz0ah33: var(--_14jajmnh);
  --_1kz0ah34: var(--_14jajmnj);
  --_1kz0ah35: var(--_14jajmnn);
}
html._1danmg7z ._1kz0ah3f {
  --_1kz0ah30: var(--_14jajmnx);
  --_1kz0ah31: var(--_14jajmnq);
  --_1kz0ah32: var(--_14jajmnv);
  --_1kz0ah33: var(--_14jajmni);
  --_1kz0ah34: var(--_14jajmnk);
  --_1kz0ah35: var(--_14jajmno);
}
._1kz0ah3g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1kz0ah3h {
  width: var(--_14jajmne);
}
._1kz0ah3i {
  width: var(--_14jajmna);
}
.ncioqc0 {
  margin-bottom: -0.1em;
}
.ncioqc2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
.ncioqc0 .ncioqc2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .ncioqc4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--ncioqc3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1danmg7z,html.sprinkles_darkMode__1danmg7z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__pqedlg0 typography_lightModeTone_light__1y2ixaa18 typography_darkModeTone_dark__1y2ixaa1b">
+        <div class="reset_base__zoxdxx0 sprinkles_paddingBottom_gutter_mobile__1danmg77i sprinkles_paddingTop_gutter_mobile__1danmg76e sprinkles_paddingLeft_gutter_mobile__1danmg79q sprinkles_paddingRight_gutter_mobile__1danmg78m sprinkles_position_relative_mobile__1danmg75e typography_lightModeTone_light__1y2ixaa18 typography_darkModeTone_dark__1y2ixaa1b sprinkles_background_surface_lightMode__1danmg732 sprinkles_background_surfaceDark_darkMode__1danmg735">
+          <span class="reset_base__zoxdxx0 sprinkles_display_block_mobile__1danmg74y typography_fontFamily__1y2ixaa0 typography_fontWeight_regular__1y2ixaa1 typography_tone_neutral__1y2ixaa21 capsize_capsizeStyle__m3vcy34 typography_textSize_large__1y2ixaad">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
